src/snapshots/rustic_rs__config__tests__default_config_passes.snap
---
source: src/config.rs
expression: config
---
RusticConfig {
    global: GlobalOptions {
        profile_substitute_env: false,
        use_profiles: [],
        group_by: None,
        dry_run: false,
        dry_run_warmup: false,
        check_index: false,
        logging_options: LoggingOptions {
            log_level: None,
            log_level_logfile: None,
            log_level_dryrun: None,
            log_level_dependencies: None,
            log_file: None,
        },
        progress_options: ProgressOptions {
            no_progress: false,
            json_progress: false,
            progress_interval: None,
        },
        hooks: Hooks {
            run_before: [],
            run_after: [],
            run_failed: [],
            run_finally: [],
            context: "",
            env: {},
            command: None,
        },
        env: {},
        prometheus: None,
        prometheus_user: None,
        prometheus_pass: None,
        metrics_labels: {},
        opentelemetry: None,
        show_time_offset: false,
    },
    repository: AllRepositoryOptions {
        be: BackendOptions {
            repository: None,
            repo_hot: None,
            options: {},
            options_hot: {},
            options_cold: {},
        },
        repo: RepositoryOptions {
            no_cache: false,
            cache_dir: None,
            warm_up: false,
            warm_up_command: None,
            warm_up_wait_command: None,
            warm_up_wait: None,
            warm_up_batch: None,
        },
        credential_opts: CredentialOptions {
            key: None,
            key_file: None,
            key_command: None,
            password: None,
            password_file: None,
            password_command: None,
        },
        hooks: Hooks {
            run_before: [],
            run_after: [],
            run_failed: [],
            run_finally: [],
            context: "",
            env: {},
            command: None,
        },
    },
    init: ConfigOptions {
        set_version: None,
        set_chunker: None,
        set_chunk_size: None,
        set_chunk_min_size: None,
        set_chunk_max_size: None,
        set_compression: None,
        set_append_only: None,
        set_treepack_size: None,
        set_treepack_size_limit: None,
        set_treepack_growfactor: None,
        set_datapack_size: None,
        set_datapack_growfactor: None,
        set_datapack_size_limit: None,
        set_min_packsize_tolerate_percent: None,
        set_max_packsize_tolerate_percent: None,
        set_extra_verify: None,
    },
    snapshot_filter: SnapshotFilter {
        filter_hosts: [],
        filter_labels: [],
        filter_paths: [],
        filter_paths_exact: [],
        filter_tags: [],
        filter_tags_exact: [],
        filter_after: None,
        filter_before: None,
        filter_size: None,
        filter_size_added: None,
        filter_last: None,
        filter_jq: None,
    },
    backup: BackupCmd {
        cli_sources: [],
        cli_name: [],
        ls: false,
        name: None,
        stdin_filename: None,
        stdin_command: None,
        as_path: None,
        no_scan: false,
        json: false,
        long: false,
        init: false,
        ignore_save_opts: LocalSourceSaveOptions {
            set_atime: None,
            set_ctime: None,
            set_devid: None,
            set_blockdev: None,
            set_xattrs: None,
        },
        parent_opts: ParentOptions {
            group_by: None,
            parents: [],
            skip_if_unchanged: false,
            force: false,
            ignore_ctime: false,
            ignore_inode: false,
        },
        excludes: Excludes {
            globs: [],
            iglobs: [],
            glob_files: [],
            iglob_files: [],
        },
        ignore_filter_opts: LocalSourceFilterOptions {
            git_ignore: false,
            no_require_git: false,
            custom_ignorefiles: [],
            exclude_if_present: [],
            exclude_if_xattr: [],
            one_file_system: false,
            exclude_larger_than: None,
        },
        snap_opts: SnapshotOptions {
            label: None,
            tags: [],
            description: None,
            description_from: None,
            time: None,
            delete_never: false,
            delete_after: None,
            host: None,
            command: None,
        },
        key_opts: KeyOptions {
            hostname: None,
            username: None,
            with_created: false,
        },
        config_opts: ConfigOptions {
            set_version: None,
            set_chunker: None,
            set_chunk_size: None,
            set_chunk_min_size: None,
            set_chunk_max_size: None,
            set_compression: None,
            set_append_only: None,
            set_treepack_size: None,
            set_treepack_size_limit: None,
            set_treepack_growfactor: None,
            set_datapack_size: None,
            set_datapack_growfactor: None,
            set_datapack_size_limit: None,
            set_min_packsize_tolerate_percent: None,
            set_max_packsize_tolerate_percent: None,
            set_extra_verify: None,
        },
        hooks: Hooks {
            run_before: [],
            run_after: [],
            run_failed: [],
            run_finally: [],
            context: "",
            env: {},
            command: None,
        },
        snapshots: [],
        sources: [],
        options: {},
        metrics_job: None,
        metrics_labels: {},
    },
    copy: CopyCmd {
        ids: [],
        targets: [],
        init: false,
        force: false,
        key_opts: KeyOptions {
            hostname: None,
            username: None,
            with_created: false,
        },
    },
    forget: ForgetOptions {
        group_by: None,
        prune: false,
        filter: SnapshotFilter {
            filter_hosts: [],
            filter_labels: [],
            filter_paths: [],
            filter_paths_exact: [],
            filter_tags: [],
            filter_tags_exact: [],
            filter_after: None,
            filter_before: None,
            filter_size: None,
            filter_size_added: None,
            filter_last: None,
            filter_jq: None,
        },
        keep: KeepOptions {
            keep_tags: [],
            keep_ids: [],
            keep_last: None,
            keep_minutely: None,
            keep_hourly: None,
            keep_daily: None,
            keep_weekly: None,
            keep_monthly: None,
            keep_quarter_yearly: None,
            keep_half_yearly: None,
            keep_yearly: None,
            keep_within: None,
            keep_within_minutely: None,
            keep_within_hourly: None,
            keep_within_daily: None,
            keep_within_weekly: None,
            keep_within_monthly: None,
            keep_within_quarter_yearly: None,
            keep_within_half_yearly: None,
            keep_within_yearly: None,
            keep_none: false,
            delete_unchanged: false,
        },
    },
    mount: None,
    webdav: WebDavCmd {
        address: None,
        path_template: None,
        time_template: None,
        symlinks: false,
        file_access: None,
        snapshot_path: None,
    },
}
